--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -121,6 +121,6 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply relative bg-zinc-50 font-sans dark:bg-black;
   }
 }
